[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii_art"
version = "0.1.0"
description = "Ascii art for python: chart, bar, histogram."
readme = "README.rst"
license = "MIT"
authors = [{ name = "lord63", email = "lord63.j@gmail.com" }]
keywords = ["ascii", "art", "chart", "bar", "histogram", "commandline", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ascii_art*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ascii_art --cov-report=term-missing -v"

[tool.coverage.run]
source = ["ascii_art"]

[tool.ruff]
line-length = 88
target-version = "py310"
